--- a/pages/account/account.wxml
+++ b/pages/account/account.wxml
@@ -1,20 +1,12 @@
 <!--account.wxml-->
-<view class="ppg_page">
-  <view class="ppg_menber">
-    <image src="{{memberHeadSrc}}"></image>
-    <view class="ppg_menber_name">{{memberPhone}}</view>
-    <view class="ppg_menber_set">设置</view>
-  </view>
-
+  <view class="ppg_page">
   <view class="ppg_mian">
     <view wx:if="{{showIntegral}}" class="ppg_sign">
       <view class="ppg_sign_badge">
         <image src="../../image/bigicon{{showGold}}.png" class="ppg_sign_badge1"></image>
-        <!-- <image src="{{'../../image/标签.png'}}" class="ppg_sign_tag"></image> -->
         <view class="ppg_sign_tag">{{rankName}} </view>
       </view>
-
-      <view class="ppg_sign_total">累计积分：{{integral}} > </view>
+      <!-- <view class="ppg_sign_total">累计积分：{{integral}} > </view> -->
       <view class="ppg_hyphen">
         <view class="ppg_advance" style="width:{{goldWidth}}px"></view>
       </view>
@@ -49,14 +41,16 @@
 
     <view wx:else class="ppg_row">
       <image src='../../image/cardbackground.png' class="ppg_card_img"></image>
-      <view class="ppg_store_name">
+      <!-- <view class="ppg_store_name">
         <view class="ppg_lef">{{storeName}}</view>
-      </view>
+      </view> -->
       <view class="ppg_menber_cardId">
-        <view class="ppg_left">卡号：{{menberCard}}</view>
+        <view class="ppg_left">NO.{{menberCard}}</view>
       </view>
     </view>
   </view>
+
+
   <view class="ppg_account_hd">
     <view class="ppg_bounceInLeft">
       <view class="ppg_mypromotion">
@@ -67,12 +61,19 @@
         <view class="ppg_fontRed ppg_up_line">{{discountNum}}</view>
         <view class="ppg_fontGray">优惠券</view>
       </view>
-      <view wx:if="{{!showIntegral}}" class="ppg_mypromotion">
+      <view class="ppg_mypromotion">
         <view class="ppg_fontRed ppg_up_line">{{integral}}</view>
         <view class="ppg_fontGray">积分</view>
       </view>
     </view>
   </view>
+
+
+    <view class="ppg_menber arrows" >
+      <image src="{{memberHeadSrc}}"></image>
+      <view class="ppg_menber_name">你好！ {{memberPhone}}</view>
+      <view class="ppg_menber_set">个人设置</view>
+    </view>
 
   <view class="ppg_listBlock">
     <view class='ppg_itemContent '>
@@ -88,7 +89,7 @@
       </view>
     </view>
     <view class="ppg_itemContent  ">
-      <image src="../../image/3.png" class="ppg_item_img"></image>
+      <image src="../../image/4.png" class="ppg_item_img"></image>
       <view class="ppg_item arrows">
         <view>购买优惠券</view>
       </view>
@@ -96,7 +97,7 @@
   </view>
   <view class="ppg_listBlock">
     <view class="ppg_itemContent ">
-      <image src="../../image/4.png" class="ppg_item_img"></image>
+      <image src="../../image/3.png" class="ppg_item_img"></image>
       <view class="ppg_item arrows">
         <view>前往购物</view>
       </view>
