--- a/pages/account/passwordSetting/passwordSetting.wxml
+++ b/pages/account/passwordSetting/passwordSetting.wxml
@@ -8,7 +8,12 @@
         <view class="weui-label ppg_text_w">原密码</view>
       </view>
       <view class="weui-cell__bd">
-          <input class=" ppg_line_h weui-input " type="text" placeholder-class='ppg_input_typ' placeholder="木木三" />
+          <input class=" ppg_line_h weui-input "  password="true" type="number" 
+          placeholder-class='ppg_input_typ'
+          bindblur="bindPsswordBlur"
+          bindconfirm="bindPsswordBlur"
+          data-input='inputOne'
+          placeholder="请输入6位以上数字" />
       </view>
     </view>
     <view class="weui-cell ppg_setList">
@@ -16,7 +21,8 @@
         <view class="weui-label ppg_text_w ">新密码</view>
       </view>
       <view class="weui-cell__bd">
-        <input class=" ppg_line_h weui-input" password="true" type="text" placeholder-class='ppg_input_typ' placeholder="请输入6位以上数字" />
+        <input class=" ppg_line_h weui-input" password="true" type="number" bindblur="bindPsswordBlur"
+          bindconfirm="bindPsswordBlur" data-input='inputTwo' placeholder-class='ppg_input_typ' placeholder="请输入6位以上数字" />
       </view>
 
     </view>
@@ -25,10 +31,11 @@
         <view class="weui-label ppg_text_w ppg_text_one">确认密码</view>
       </view>
       <view class="weui-cell__bd">
-        <input class=" ppg_line_h weui-input" password="true" type="text" placeholder-class='ppg_input_typ' placeholder="请输入6位以上数字" />
+        <input class=" ppg_line_h weui-input" password="true" type="number"  bindblur="bindPsswordBlur"
+          bindconfirm="bindPsswordBlur" data-input='inputThr' placeholder-class='ppg_input_typ' placeholder="请输入6位以上数字" />
       </view>
     </view>
   </view>
-  <button class="weui-btn ppg_but_fd" type="">退出账户</button>
+  <button class="weui-btn ppg_but_fd " type="" bindtap="bindReturn">确定</button>
   <view style="height:740rpx;"></view>
 </view>
