--- a/pages/account/account/account.wxml
+++ b/pages/account/account/account.wxml
@@ -14,27 +14,27 @@
           </view>
         <view class="ppg_sign_item ppg_goldSolid">
           <view class="ppg_sign_item_hd ">100</view>
-          <image class="ppg_sign_item_img " src="../../image/a1.png"></image>
+          <image class="ppg_sign_item_img " src="../../../image/a1.png"></image>
           <view class="ppg_sign_item_ft">V1</view>
         </view>
         <view class="ppg_sign_item ">
           <view class="ppg_sign_item_hd">300</view>
-          <image class="ppg_sign_item_img" src="../../image/{{showGold >= 2 ? 'a' : 'b' }}2.png"></image>
+          <image class="ppg_sign_item_img" src="../../../image/{{showGold >= 2 ? 'a' : 'b' }}2.png"></image>
           <view class="ppg_sign_item_ft">V2</view>
         </view>
         <view class="ppg_sign_item">
           <view class="ppg_sign_item_hd">500</view>
-          <image class="ppg_sign_item_img" src="../../image/{{showGold >= 3 ? 'a' : 'b' }}3.png"></image>
+          <image class="ppg_sign_item_img" src="../../../image/{{showGold >= 3 ? 'a' : 'b' }}3.png"></image>
           <view class="ppg_sign_item_ft">V3</view>
         </view>
         <view class="ppg_sign_item">
           <view class="ppg_sign_item_hd">800</view>
-          <image class="ppg_sign_item_img" src="../../image/{{showGold >= 4 ? 'a' : 'b' }}4.png"></image>
+          <image class="ppg_sign_item_img" src="../../../image/{{showGold >= 4 ? 'a' : 'b' }}4.png"></image>
           <view class="ppg_sign_item_ft">V4</view>
         </view>
         <view class="ppg_sign_item">
           <view class="ppg_sign_item_hd">1000</view>
-          <image class="ppg_sign_item_img" src="../../image/{{showGold >= 5 ? 'a' : 'b' }}5.png"></image>
+          <image class="ppg_sign_item_img" src="../../../image/{{showGold >= 5 ? 'a' : 'b' }}5.png"></image>
           <view class="ppg_sign_item_ft">V5</view>
         </view>
       </view>
@@ -52,17 +52,17 @@
   </view>
 
 
-  <view class="ppg_account_hd">
+  <view class="ppg_account_hd"  >
     <view class="ppg_bounceInLeft">
-      <view class="ppg_mypromotion">
-        <view class="ppg_fontRed" bindtap='bindtoggle'>{{balance}}</view>
+      <view class="ppg_mypromotion" bindtap="bindSet" data-Inof='balance'>
+        <view class="ppg_fontRed" bindtap='bindtoggle'   >{{balance}}</view>
         <view class="ppg_fontGray">余额</view>
       </view>
-      <view class="ppg_mypromotion">
-        <view class="ppg_fontRed ppg_up_line">{{discountNum}}</view>
+      <view class="ppg_mypromotion" bindtap="bindSet" data-Inof='coupon' >
+        <view class="ppg_fontRed ppg_up_line"    >{{discountNum}}</view>
         <view class="ppg_fontGray">优惠券</view>
       </view>
-      <view class="ppg_mypromotion">
+      <view class="ppg_mypromotion" bindtap="bindSet" data-Inof='integral'>
         <view class="ppg_fontRed ppg_up_line">{{integral}}</view>
         <view class="ppg_fontGray">积分</view>
       </view>
@@ -70,20 +70,20 @@
   </view>
 
 
-    <view class="ppg_menber arrows " >
+    <view class="ppg_menber arrows " bindtap="bindSet" data-Inof='setting'>
       <image src="{{memberHeadSrc}}"></image>
       <view class="ppg_menber_name">你好！{{memberPhone}}</view>
       <view class="ppg_menber_set">个人设置</view>
     </view>
 
-  <view class="ppg_listBlock">
-    <view class='ppg_itemContent '>
-      <image src="../../../image/1.png" class="ppg_item_img"></image>
+  <view class="ppg_listBlock" >
+    <view class='ppg_itemContent'  bindtap="bindSet" data-Inof='balancePay' >
+      <image src="../../../image/1.png" class="ppg_item_img"  ></image>
       <view class="ppg_item arrows ppg_line_dowm ">
         <view>余额支付</view>
       </view>
     </view>
-    <view class="ppg_itemContent ">
+    <view class="ppg_itemContent " bindtap="bindSet" data-Inof='myList' >
       <image src="../../../image/2.png" class="ppg_item_img"></image>
       <view class="ppg_item arrows ppg_line_dowm">
         <view>我的订单</view>
@@ -97,7 +97,7 @@
     </view>
   </view>
   <view class="ppg_listBlock">
-    <view class="ppg_itemContent ">
+    <view class="ppg_itemContent " bindtap="bindSet" data-Inof='getBackShopping'>
       <image src="../../../image/3.png" class="ppg_item_img"></image>
       <view class="ppg_item arrows">
         <view>前往购物</view>
