一些基础的小小调整。
注释点击有背景的代码。增加积分和金额的页面循环代码。

--- a/pages/account/account/account.wxss
+++ b/pages/account/account/account.wxss
@@ -5,9 +5,9 @@
   box-sizing: border-box;
 }
 
-.ppg_menber:active {
+/* .ppg_menber:active {
     background-color: #ade1f5;
-}
+} */
 
 .ppg_menber {
   background: #fff;
@@ -249,9 +249,9 @@
   color: #3a3c4c;
 }
 
-.ppg_itemContent:active {
+/* .ppg_itemContent:active {
   background-color: #ade1f5;
-}
+} */
 
 .ppg_line_dowm {
   border-bottom: #e5e5e5 1px solid;
