--- a/pages/account/pay/pay.wxml
+++ b/pages/account/pay/pay.wxml
@@ -10,8 +10,8 @@
     </view>
     <view class=" ppg_balance ppg_pay_num">
         <view class="ppg_paynum_title">金额</view>
-        <input class="ppg_pay_input " type="number" focus="true" placeholder-class='ppg_input_typ' placeholder="请输入充值金额" />
+        <input class="ppg_pay_input " type="number" focus="true" placeholder-class='ppg_input_typ' bindinput='bindDonePayIn' bindblur="bindDonePayIn"  placeholder="请输入充值金额" />
     </view>
-    <button class="ppg_but_fd  {{index ? 'ppg_red' : '' }}" type="">下一步</button>
+    <button class="ppg_but_fd  {{butRed ? 'ppg_red' : '' }}" type="">下一步</button>
     <view style="height:350px;"></view>
 </view>
